<resources>
    <string name="app_name">Project Counter</string>

    <!-- Main Activity -->
    <string name="button_main_activity_add_project">Add Project</string>
    <string name="button_main_activity_settings">Settings</string>
    <string name="tv_projects_completed">Projects Completed</string>
    <string name="tv_rows_completed">Rows</string>
    <string name="tv_stitches_completed">Stitches</string>
    <string name="tv_overall_time">Overall Time</string>

    <!-- New Project Intent -->
    <string name="tv_new_project_title">Add New Project</string>
    <string name="tv_new_project_name">Project Name</string>
    <!-- End of new Project Intent -->

    <!-- Project View Intent -->
    <string name="tv_project_name">Project Name</string>
    <string name="tv_global_counter">Global Counter</string>
    <string name="tv_project_time">00:00:00</string>
    <string name="button_project_time_start">Start</string>
    <string name="button_project_time_stop">Stop</string>

    <!-- New Counter Intent -->
    <string name="tv_add_counter_header">Add New Counter</string>
    <string name="tv_add_counter_label">Counter Name</string>
    <string name="tv_add_counter_inc_by">Increment Counter By</string>
    <string name="tv_add_counter_is_global">Attached to Global Counter?</string>
    <string name="tb_add_counter_is_global_true">Yes</string>
    <string name="tv_add_counter_is_global_false">No</string>

    <!-- Universal -->
    <string name="button_create">Create</string>
    <string name="button_inc">+</string>
    <string name="button_dec">-</string>
</resources>
