<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intent.AddCounter"
        android:id="@+id/layout_add_counter_root">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/container_add_project_header"
            android:background="@color/colorPrimary">

        <TextView
                android:text="@string/tv_add_counter_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_add_project_header"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <TextView
            android:text="@string/tv_add_counter_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_add_counter_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/container_add_project_header"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_add_counter"
            android:background="@drawable/background_text_edit"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_counter_label"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/tv_add_counter_inc_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_add_counter_inc_by"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_add_counter"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etn_add_counter_inc_by"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_counter_inc_by"
            android:gravity="center"
            android:background="@drawable/background_text_edit"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="1"/>

    <TextView
            android:text="@string/tv_add_counter_is_global"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_add_counter_is_global"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etn_add_counter_inc_by"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center"/>

    <ToggleButton
            android:text="ToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tb_add_counter_is_global"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_counter_is_global"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textOn="@string/tb_add_counter_is_global_true"
            android:textOff="@string/tv_add_counter_is_global_false"
            android:checked="true"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

    <Button
            android:text="@string/button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_add_counter_create"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/tb_add_counter_is_global"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:onClick="createCounter"/>

    <Button
            android:text="X"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/button_add_counter_close"
            android:layout_margin="50dp"
            android:background="@drawable/background_circle_danger_button"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:onClick="closeIntent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_add_counter_create"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>