<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/layout_main_activity_root"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/container_main_activity_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:background="@color/colorPrimary">

        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_activity_main_app_title"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorWhite"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/container_main_activity_project_info"
                android:gravity="center">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/container_main_activity_projects_completed"
                    android:gravity="center"
                    android:layout_margin="5dp">

                <TextView
                        android:text="@string/tv_projects_completed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_projects_completed"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"/>

                <TextView
                        android:text="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_projects_completed_value"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp"
                        android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/container_main_activity_time"
                    android:gravity="center"
                    android:layout_margin="5dp">

                <TextView
                        android:text="@string/tv_overall_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_overall_time"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"/>

                <TextView
                        android:text="00:00:00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_overall_time_value"
                        android:textSize="30sp"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/container_main_activity_stitches"
                    android:gravity="center"
                    android:layout_margin="5dp">

                <TextView
                        android:text="@string/tv_stitches_completed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_overall_stitches"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"/>

                <TextView
                        android:text="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_overall_stitches_value"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/container_main_activity_overall_rows"
                    android:gravity="center"
                    android:layout_margin="5dp">

                <TextView
                        android:text="@string/tv_rows_completed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_overall_rows"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"/>

                <TextView
                        android:text="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_overall_rows_value"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp"
                        android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/sv_project_stack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_main_activity_header"
            app:layout_constraintBottom_toTopOf="@+id/container_activity_main_footer">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/container_project_stack"
                android:gravity="center"/>
    </ScrollView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/container_activity_main_footer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorPrimary"
            android:gravity="center">

        <Button
                android:text="@string/button_main_activity_add_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_activity_main_add_project"
                android:onClick="addProject"
                tools:layout_editor_absoluteY="456dp"
                tools:layout_editor_absoluteX="286dp"
                android:textAllCaps="false"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
                android:text="@string/button_main_activity_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_activity_main_settings"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>