<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intent.AddProject"
        android:id="@+id/layout_project_add_root">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/layout_project_add_header"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <TextView
                android:text="@string/tv_new_project_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorWhite"
                android:typeface="normal"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_project_add_header"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/layout_project_add_container"
            android:gravity="center">

        <TextView
                android:text="@string/tv_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_add_project_new_name"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_margin="10dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_add_project"
                android:background="@drawable/background_text_edit"
                android:layout_margin="10dp"
                android:maxLength="11"/>

        <Button
                android:text="@string/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_add_project_create"
                android:layout_margin="10dp"
                android:onClick="createProject"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"/>

        <Button
                android:text="X"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/button_add_project_close"
                android:layout_margin="50dp"
                android:background="@drawable/background_circle_danger_button"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:onClick="closeIntent"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>