<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intent.ProjectView"
        android:id="@+id/layout_project_view_root">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/container_project_view_header"
            android:background="@color/colorPrimary">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_project_view_header_title"
                android:gravity="center">

            <TextView
                    android:text="@string/tv_project_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_project_view_project_name"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorWhite"
                    android:textSize="28sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>

            <ToggleButton
                    android:text="ToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tb_project_view_project_timer"
                    android:layout_weight="1"
                    tools:text="@string/button_project_time_start"
                    android:textOff="@string/button_project_time_start"
                    android:textOn="@string/button_project_time_stop"
                    android:gravity="center"/>

            <TextView
                    android:text="@string/tv_project_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_project_view_project_timer"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/container_project_view_header_global"
                android:gravity="center">

            <Button
                    android:text="+"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/button_project_view_global_inc"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:background="@drawable/background_circle_global"
                    android:textSize="24sp"
                    android:onClick="incGlobalCounter"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/container_project_view_global_content"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                <TextView
                        android:text="@string/tv_global_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_project_view_global_counter"
                        android:layout_weight="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorWhite"/>

                <TextView
                        android:text="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_project_view_global_row"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"/>
            </LinearLayout>

            <Button
                    android:text="-"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/button_project_view_global_dec"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:background="@drawable/background_circle_global"
                    android:textSize="24sp"
                    android:onClick="decGlobalCounter"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/container_project_view_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/container_project_view_footer"
            android:id="@+id/container_project_view_counters">
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/container_project_view_footer"
            android:background="@color/colorPrimary"
            android:gravity="center">

        <Button
                android:text="+"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/button_project_view_global_inc3"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/background_circle_global"
                android:textSize="24sp"
                android:onClick="addCounterIntent"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>